--- a/.github/workflows/updater.yml
+++ b/.github/workflows/updater.yml
@@ -18,12 +18,6 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-
-      - name: Clone EN resources
-        uses: actions/checkout@v3
-        with:
-          repository: 'FabulousCupcake/en_redive_master_db_diff'
-          path: 'en_csv'
       
       - name: Check version
         id: check_update
@@ -40,6 +34,13 @@ jobs:
               Write-Host "The current version is latest!"
               "version=latest" >> $env:GITHUB_OUTPUT
           }
+
+      - name: Clone EN resources
+        if: steps.check_update.outputs.version != 'latest'
+        uses: actions/checkout@v3
+        with:
+          repository: 'FabulousCupcake/en_redive_master_db_diff'
+          path: 'en_csv'
 
       - name: Generate .csv dump
         if: steps.check_update.outputs.version != 'latest'
